[gd_scene load_steps=10 format=3 uid="uid://dvg1exap74vpu"]

[ext_resource type="Texture2D" uid="uid://bhm0iahcexycw" path="res://addons/Menu Buttons/Square Buttons/Square Buttons/Up Square Button.png" id="1_cqk6l"]
[ext_resource type="Script" path="res://Inputs/Inputs.gd" id="1_tfjta"]
[ext_resource type="Texture2D" uid="uid://b3u7s2hjdnum2" path="res://addons/Menu Buttons/Square Buttons/Square Buttons/Down Square Button.png" id="2_sv7cc"]
[ext_resource type="Texture2D" uid="uid://cwdhfa517cmix" path="res://addons/Menu Buttons/Square Buttons/Square Buttons/Back Square Button.png" id="3_opt3k"]
[ext_resource type="Texture2D" uid="uid://bgea81c4ounkt" path="res://addons/Menu Buttons/Square Buttons/Square Buttons/Next Square Button.png" id="4_i011q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bluai"]
size = Vector2(120, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mjs8v"]
size = Vector2(120, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kknnn"]
size = Vector2(110, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lokfk"]
size = Vector2(110, 160)

[node name="Inputs" type="CanvasLayer"]
script = ExtResource("1_tfjta")

[node name="UpTexture" type="Sprite2D" parent="."]
position = Vector2(362, 1138)
texture = ExtResource("1_cqk6l")

[node name="DownTexture" type="Sprite2D" parent="."]
position = Vector2(362, 1386)
texture = ExtResource("2_sv7cc")

[node name="LeftTexture" type="Sprite2D" parent="."]
position = Vector2(122, 1258)
texture = ExtResource("3_opt3k")

[node name="RightTexture" type="Sprite2D" parent="."]
position = Vector2(602, 1258)
texture = ExtResource("4_i011q")

[node name="DownButton" type="TouchScreenButton" parent="."]
position = Vector2(362, 1426)
scale = Vector2(2.09, 2.02)
shape = SubResource("RectangleShape2D_bluai")
action = "thrust_reverse"

[node name="UpButton" type="TouchScreenButton" parent="."]
position = Vector2(362, 1098)
scale = Vector2(2.09, 2.02)
shape = SubResource("RectangleShape2D_mjs8v")
action = "thrust_forward"

[node name="RightButton" type="TouchScreenButton" parent="."]
position = Vector2(607, 1258)
scale = Vector2(2.09, 2.02)
shape = SubResource("RectangleShape2D_kknnn")
action = "rotate_right"

[node name="LeftButton" type="TouchScreenButton" parent="."]
position = Vector2(118, 1258)
scale = Vector2(2.09, 2.02)
shape = SubResource("RectangleShape2D_lokfk")
action = "rotate_left"

[connection signal="pressed" from="DownButton" to="." method="_on_down_button_pressed"]
[connection signal="released" from="DownButton" to="." method="_on_down_button_released"]
[connection signal="pressed" from="UpButton" to="." method="_on_up_button_pressed"]
[connection signal="released" from="UpButton" to="." method="_on_up_button_released"]
[connection signal="pressed" from="RightButton" to="." method="_on_right_button_pressed"]
[connection signal="released" from="RightButton" to="." method="_on_right_button_released"]
[connection signal="pressed" from="LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="released" from="LeftButton" to="." method="_on_left_button_released"]
